--- a/templates/navigation/menu--main--desktop.html.twig
+++ b/templates/navigation/menu--main--desktop.html.twig
@@ -49,19 +49,21 @@
       <li{{ item.attributes.addClass(item_classes) }}>
         <span class="menu__link-wrapper">
           {% if not item.is_nolink %}
-            {% set item_title = item.title %}
+            {% set item_title %}
+              <span class="menu__link__text">{{ item.title }}</span>
+            {% endset %}
 
             {%- set icon_name = (item.url.getOption('attributes')).icon -%}
             {% if icon_name %}
               {% set item_title %}
                 {% include '@hdbt/misc/icon.twig' with {icon: icon_name, icons_path: icons_path} %}
-                {{ item.title }}
+                <span class="menu__link__text">{{ item.title }}</span>
               {% endset %}
             {% endif %}
 
             {{ link(item_title, item.url) }}
           {% else %}
-            <span{{ create_attribute({'class': item_classes} ) }}>{{ item.title }}</span>
+            <span{{ create_attribute({'class': item_classes} ) }}><span class="menu__link__text">{{ item.title }}</span></span>
           {% endif %}
 
           {% if item.is_collapsed or item.is_expanded %}
