--- a/src/scss/components/paragraphs/_link.scss
+++ b/src/scss/components/paragraphs/_link.scss
@@ -44,7 +44,7 @@ a.link[target="_blank"] {
   align-items: center;
   display: inline-flex;
 
-  &:after {
+  &::after {
     background-color: $color-black;
     background-size: contain;
     content: "";
