--- a/src/scss/components/navigation/_header-bottom-navigation.scss
+++ b/src/scss/components/navigation/_header-bottom-navigation.scss
@@ -58,7 +58,7 @@
           position: absolute;
           top: 50%;
           transform: translateY(-50%);
-          width: calc(100% - 24px); // Width of the dropdown button.
+          width: calc(100% + #{$spacing-half});
         }
       }
 
@@ -79,6 +79,14 @@
       @include font-size(18px, 24px);
       padding: $spacing-and-half 0;
       text-decoration: none;
+    }
+  }
+
+  .menu__item--children .menu__link-wrapper a {
+    &:focus {
+      &::after {
+        width: calc(100% - 24px); // Width of the dropdown button.
+      }
     }
   }
 
