UHF-1756: Added data-attributes for the block and region templates

--- a/src/scss/components/navigation/_mobile-navigation.scss
+++ b/src/scss/components/navigation/_mobile-navigation.scss
@@ -307,6 +307,6 @@ $spacing-menu-item: 20px;
 }
 
 // Hide the mobile navigation footer template.
-#mobile-navigation-footer-template {
+[data-hdbt-selector="mobile-navigation-footer-template"] {
   display: none;
 }
