UHF-1755: Added icons to ckeditor.

--- a/src/scss/ckeditor.scss
+++ b/src/scss/ckeditor.scss
@@ -14,6 +14,7 @@
 @import "components/content/quoted";
 @import "components/paragraphs/link";
 @import "components/button/button";
+@import "components/icons/hdbt-icon";
 
 body.cke_editable {
   display: block;
