--- a/templates/paragraphs/paragraph--hero.html.twig
+++ b/templates/paragraphs/paragraph--hero.html.twig
@@ -88,24 +88,18 @@
                 {% set target_new = item['#options']['target_new'] %}
                 {% set icon = item['#options']['icon'] %}
 
-                <a
-                  href="{{ link }}"
-                  class="hero__button hds-button
-                  {% if link_type %}{{ 'hds-button--' ~ link_type }}{% endif %}
-                  {% if icon %}{{ 'hdbt-icon hdbt-icon--' ~ icon }}{% endif %}"
-                  {% if target_new %}target="_blank"{% endif %}
-                >
-                  {% if icon_first == true %}<span aria-hidden="true" class="hds-icon {{ 'hds-icon--' ~ icon_first_type }}"></span>{% endif %}
+                {%
+                  set link_classes = [
+                    'hero__button',
+                    'hds-button',
+                    link_type ? 'hds-button--' ~ link_type|clean_class,
+                    icon or target_new ? 'hdbt-icon',
+                    icon ? 'hdbt-icon--' ~ icon|clean_class,
+                    target_new and not icon ? 'hdbt-icon--link-external'
+                  ]
+                %}
+                <a href="{{ link }}" {% if target_new %}target="_blank"{% endif %}{{ create_attribute({'class': link_classes} ) }}>
                   <span class="hds-button__label">{{ text }}</span>
-                  {% if link_type == 'supplementary' %}
-                    {% if target_new %}
-                      <span aria-hidden="true" class="hds-icon hds-icon--link-external"></span>
-                    {% else %}
-                      <span aria-hidden="true" class="hds-icon hds-icon--arrow-right"></span>
-                    {% endif %}
-                  {% elseif target_new %}
-                    <span aria-hidden="true" class="hds-icon hds-icon--link-external"></span>
-                  {% endif %}
                 </a>
               {% endfor %}
             </div>
