--- a/src/scss/components/navigation/_header-bottom-navigation.scss
+++ b/src/scss/components/navigation/_header-bottom-navigation.scss
@@ -120,7 +120,8 @@
       .menu__link-wrapper {
         width: 100%;
 
-        a {
+        a,
+        .menu__item--nolink {
           @include font-size(16px, 20px);
           display: block;
           padding: $spacing $spacing-double;
