UHF-1605: Improve the secondary close button functionality to work in more accessible way

--- a/src/scss/components/paragraphs/_accordion.scss
+++ b/src/scss/components/paragraphs/_accordion.scss
@@ -38,6 +38,7 @@
     }
 
     // Accordion focused state.
+    .accordion-item__button--toggle:focus,
     &.handorgel__header--focus .accordion-item__button--toggle {
       position: relative;
 
