Switched --hdbt-theme-color variables to use color palettes.

--- a/src/scss/components/content/_highlighted.scss
+++ b/src/scss/components/content/_highlighted.scss
@@ -13,7 +13,7 @@
   }
 
   &::before {
-    background-color: var(--hdbt-theme-color);
+    background-color: var(--hdbt-color-palette--primary);
     content: "";
     height: 100%;
     left: 0;
