--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -147,19 +147,20 @@
 
   .hds-button--secondary {
     --background-color: transparent;
-    --background-color-hover: var(--color-black-10);
+    --background-color-hover: var(--color-black-90);
     --background-color-focus: transparent;
-    --background-color-hover-focus: var(--color-black-10);
+    --background-color-hover-focus: var(--color-black-90);
     --background-color-disabled: transparent;
-    --border-color: var(--color-black);
+    --border-color: var(--color-black-90);
     --border-color-hover: var(--color-black-90);
-    --border-color-focus: var(--color-black);
+    --border-color-focus: var(--color-black-90);
     --border-color-hover-focus: var(--color-black-90);
     --border-color-disabled: var(--color-black-50);
-    --color: var(--color-black);
-    --color-hover: var(--color-black-90);
-    --color-focus: var(--color-black);
-    --color-hover-focus: var(--color-black-90);
+    --color: var(--color-black-90);
+    --color-hover: var(--color-white);
+    --color-focus: var(--color-black-90);
+    --color-hover-focus: var(--color-white);
+    --focus-outline-color: var(--color-black-90);
   }
 
   .footer-bottom,
@@ -193,19 +194,20 @@
 
   .hds-button--secondary {
     --background-color: transparent;
-    --background-color-hover: var(--color-black-80);
+    --background-color-hover: var(--color-white);
     --background-color-focus: transparent;
-    --background-color-hover-focus: var(--color-black-80);
+    --background-color-hover-focus: var(--color-white);
     --background-color-disabled: transparent;
     --border-color: var(--color-white);
-    --border-color-hover: var(--color-black-10);
+    --border-color-hover: var(--color-white);
     --border-color-focus: var(--color-white);
-    --border-color-hover-focus: var(--color-black-10);
+    --border-color-hover-focus: var(--color-white);
     --border-color-disabled: var(--color-black-50);
     --color: var(--color-white);
-    --color-hover: var(--color-black-10);
+    --color-hover: var(--color-black-90);
     --color-focus: var(--color-white);
-    --color-hover-focus: var(--color-black-10);
+    --color-hover-focus: var(--color-black-90);
+    --focus-outline-color: var(--color-white);
   }
 
   .footer-bottom,
