--- a/templates/paragraphs/paragraph--hero.html.twig
+++ b/templates/paragraphs/paragraph--hero.html.twig
@@ -105,6 +105,7 @@
             </div>
           {% endif %}
         </div>
+        <span class="hero__arrow" aria-hidden="true"></span>
       {% endblock %}
     {% endembed %}
 
