--- a/templates/misc/koros/koro-wave.twig
+++ b/templates/misc/koros/koro-wave.twig
@@ -2,7 +2,7 @@
 <svg xmlns="http://www.w3.org/2000/svg" aria-hidden="true" width="100%" height="50" fill="currentColor">
   <defs>
     <pattern id="{{ korosId }}" x="0" y="0" width="67" height="51" patternUnits="userSpaceOnUse">
-      <path class="cls-1" d="M67,50V23.39h0c-15,0-27.91-9.64-33.46-23.34C27.93,13.73,15,23.31,0,23.29V50Z"/>
+      <path class="cls-1" d="M 67 63.5 V 36.89 h 0 c -15 0 -27.91 -9.64 -33.46 -23.34 C 27.93 27.23 15 36.81 0 36.79 V 63.5 Z"/>
     </pattern>
   </defs>
   <rect fill="url(#{{ korosId }})" width="100%" height="50" />
